bynkc/tests/fixtures/negative/136_integration_mock_in_integration/src/it.bynk
test integration "x" {
  wires app.a, app.b
  mocks C = MockC { fn f() -> Effect[Int] { 9 } }
  test "t" { let r <- app.a.ping() assert r == 1 }
}
